--- a/CNN/Extent-Report/ExtentReport.html
+++ b/CNN/Extent-Report/ExtentReport.html
@@ -54,7 +54,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2019-01-23 02:22:36</span>
+					<span class='suite-started-time'>2019-01-23 03:01:44</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -84,25 +84,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 29s+742ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 42s+228ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 29s+742ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 42s+228ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2019-01-23 02:22:07</span> 
+							<span class='panel-lead suite-started-time'>2019-01-23 03:01:02</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2019-01-23 02:22:36</span> 
+							<span class='panel-lead suite-ended-time'>2019-01-23 03:01:44</span> 
 						</div> 
 					</div>
 				</div>
@@ -273,17 +273,17 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active fail ' extentid='e57b4154-28fb-4185-ac6d-9837f9451d65'>
+										<li class='collection-item test displayed active pass ' extentid='4432a8dd-3911-4833-a5e4-4a31629b1668'>
 											<div class='test-head'>
-												<span class='test-name'>testCheckListOfProvidersUrl1 </span>
-												<span class='test-status label right outline capitalize fail'>fail</span>
+												<span class='test-name'>testCheckListOfProviders </span>
+												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide  livetvpagetest'></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-01-23 02:22:26</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-01-23 02:22:34</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 7s+969ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-01-23 03:01:21</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-01-23 03:01:43</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 21s+253ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -302,40 +302,9 @@
 														</thead>
 														<tbody>
 																<tr>
-																	<td class='status fail' title='fail' alt='fail'><i class='mdi-navigation-cancel'></i></td>
-																	<td class='timestamp'>02:22:34</td>
-																	<td class='step-details'>java.lang.AssertionError: expected [https://loginprodx.att.net/commonLogin/igate_edam/controller.do?TAM_OP=login&USERNAME=unauthenticated&ERROR_CODE=0x00000000&ERROR_TEXT=HPDBA0521I%20%20%20Successful%20completion&METHOD=GET&URL=%2FFIM%2Fsps%2Fauth%3FFedName%3DATT-ADB%26FedId%3Duuid2b03a1d7-0139-1cca-be40-d32385710be9%3Ftucd567%3Dw&REFERER=https%3A%2F%2Fsp.auth.adobe.com%2Fadobe-services%2Fauthenticate%2Fsaml%3Fnoflash%3Dtrue%26mso_id%3DATT%26requestor_id%3DCNN%26no_iframe%3Dtrue%26domain_name%3Dadobe.com%26redirect_url%3Dhttps%253A%252F%252Fentitlement.auth.adobe.com%252Fentitlement%252Fjs%252FcompleteBackgroundLogin.html&HOSTNAME=loginprodx.att.net&AUTHNLEVEL=&FAILREASON=&PROTOCOL=https&OLDSESSION=] but found [https://sp.auth.adobe.com/adobe-services/authenticate/saml?noflash=true&mso_id=Cablevision&requestor_id=CNN&no_iframe=true&domain_name=adobe.com&redirect_url=https%3A%2F%2Fentitlement.auth.adobe.com%2Fentitlement%2Fjs%2FcompleteBackgroundLogin.html]
-	at org.testng.Assert.fail(Assert.java:96)
-	at org.testng.Assert.failNotEquals(Assert.java:776)
-	at org.testng.Assert.assertEqualsImpl(Assert.java:137)
-	at org.testng.Assert.assertEquals(Assert.java:118)
-	at org.testng.Assert.assertEquals(Assert.java:453)
-	at org.testng.Assert.assertEquals(Assert.java:463)
-	at tests.LiveTvPageTest.testCheckListOfProvidersUrl1(LiveTvPageTest.java:74)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
-	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:564)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:124)
-	at org.testng.internal.Invoker.invokeMethod(Invoker.java:583)
-	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:719)
-	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:989)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:125)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:109)
-	at org.testng.TestRunner.privateRun(TestRunner.java:648)
-	at org.testng.TestRunner.run(TestRunner.java:505)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:455)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:450)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:415)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:364)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:84)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1208)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1137)
-	at org.testng.TestNG.runSuites(TestNG.java:1049)
-	at org.testng.TestNG.run(TestNG.java:1017)
-	at org.testng.IDEARemoteTestNG.run(IDEARemoteTestNG.java:73)
-	at org.testng.RemoteTestNGStarter.main(RemoteTestNGStarter.java:123)</td>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>03:01:43</td>
+																	<td class='step-details'>Test Passed</td>
 																</tr>
 														</tbody>
 													</table>
@@ -396,13 +365,13 @@
 													<span class='category-name'>LiveTvPageTest</span>
 												</div>
 												<div class='category-status-counts'>
-														<span class='fail label dot'>Fail: 1</span>
+														<span class='pass label dot'>Pass: 1</span>
 												</div>
 												<div class='cat-body'>
 													<div class='category-status-counts'>
 														<div class='button-group'>
-															<a href='#!' class='pass label filter'>Pass <span class='icon'>0</span></a>
-															<a href='#!' class='fail label filter'>Fail <span class='icon'>1</span></a>
+															<a href='#!' class='pass label filter'>Pass <span class='icon'>1</span></a>
+															<a href='#!' class='fail label filter'>Fail <span class='icon'>0</span></a>
 															<a href='#!' class='other label filter'>Others <span class='icon'>0</span></a>
 														</div>
 													</div>
@@ -416,10 +385,10 @@
 																</tr>
 															</thead>
 															<tbody>
-																	<tr class='fail'>
-																		<td>2019-01-23 02:22:26</td>
-																		<td><span class='category-link linked' extentid='e57b4154-28fb-4185-ac6d-9837f9451d65'>testCheckListOfProvidersUrl1</span></td>
-																		<td><div class='status label capitalize fail'>fail</div></td>
+																	<tr class='pass'>
+																		<td>2019-01-23 03:01:21</td>
+																		<td><span class='category-link linked' extentid='4432a8dd-3911-4833-a5e4-4a31629b1668'>testCheckListOfProviders</span></td>
+																		<td><div class='status label capitalize pass'>pass</div></td>
 																	</tr>
 															<tbody>
 														</table>
