--- a/CNN/Extent-Report/ExtentReport.html
+++ b/CNN/Extent-Report/ExtentReport.html
@@ -54,7 +54,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2019-01-24 03:08:01</span>
+					<span class='suite-started-time'>2019-01-24 08:48:15</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -84,25 +84,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 2m 25s+347ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 4m 10s+181ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 2m 25s+347ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 4m 10s+181ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2019-01-24 03:05:35</span> 
+							<span class='panel-lead suite-started-time'>2019-01-24 08:44:05</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2019-01-24 03:08:01</span> 
+							<span class='panel-lead suite-ended-time'>2019-01-24 08:48:15</span> 
 						</div> 
 					</div>
 				</div>
@@ -205,7 +205,7 @@
 									<tbody>
 											<tr>
 												<td>
-													ExcelReaderTest
+													GoogleSheetReaderTest
 												</td>
 											</tr>
 									</tbody>
@@ -241,7 +241,7 @@
 										<i class='mdi-maps-local-offer'></i>
 									</a>
 									<ul id='category-toggle' class='dropdown-content'>
-											<li class='ExcelReaderTest'><a href='#!'>ExcelReaderTest</a></li>
+											<li class='GoogleSheetReaderTest'><a href='#!'>GoogleSheetReaderTest</a></li>
 										<li class='divider'></li>
 										<li class='clear'><a href='#!'>Clear Filters</a></li>
 									</ul>
@@ -273,22 +273,22 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='0c76a809-cd91-4d3d-b2a8-52a2527510b7'>
+										<li class='collection-item test displayed active pass ' extentid='7b516ea4-d658-47bb-a730-c96fa8455446'>
 											<div class='test-head'>
-												<span class='test-name'>testNavItemfromExcel9 </span>
+												<span class='test-name'>testSearchItemFromGoogleSheet </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
-												<span class='category-assigned hide  excelreadertest'></span>
+												<span class='category-assigned hide  googlesheetreadertest'></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-01-24 03:06:07</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-01-24 03:07:59</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 1m 52s+499ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-01-24 08:45:10</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2019-01-24 08:48:11</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 3m 1s+197ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
 														<div class='categories'>
-																<span class='category text-white'>ExcelReaderTest</span>
+																<span class='category text-white'>GoogleSheetReaderTest</span>
 														</div>
 												</div>
 												<div class='test-steps'>
@@ -303,22 +303,17 @@
 														<tbody>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>03:06:07</td>
+																	<td class='timestamp'>08:45:10</td>
 																	<td class='step-details'>Browser is launched<br></td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>03:06:07</td>
-																	<td class='step-details'>ExcelReaderTest: test Nav Itemfrom Excel 9<br></td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>03:06:07</td>
-																	<td class='step-details'>ExcelReaderTest: read Nav Item Excel<br></td>
+																	<td class='timestamp'>08:45:10</td>
+																	<td class='step-details'>GoogleSheetReaderTest: test Search Item From Google Sheet<br></td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>03:07:59</td>
+																	<td class='timestamp'>08:48:11</td>
 																	<td class='step-details'>Test Passed</td>
 																</tr>
 														</tbody>
@@ -377,7 +372,7 @@
 									<ul id='cat-collection' class='cat-collection'>
 											<li class='category-item displayed'>
 												<div class='cat-head'>
-													<span class='category-name'>ExcelReaderTest</span>
+													<span class='category-name'>GoogleSheetReaderTest</span>
 												</div>
 												<div class='category-status-counts'>
 														<span class='pass label dot'>Pass: 1</span>
@@ -401,8 +396,8 @@
 															</thead>
 															<tbody>
 																	<tr class='pass'>
-																		<td>2019-01-24 03:06:07</td>
-																		<td><span class='category-link linked' extentid='0c76a809-cd91-4d3d-b2a8-52a2527510b7'>testNavItemfromExcel9</span></td>
+																		<td>2019-01-24 08:45:10</td>
+																		<td><span class='category-link linked' extentid='7b516ea4-d658-47bb-a730-c96fa8455446'>testSearchItemFromGoogleSheet</span></td>
 																		<td><div class='status label capitalize pass'>pass</div></td>
 																	</tr>
 															<tbody>
